--- a/templates/index.html
+++ b/templates/index.html
@@ -48,9 +48,11 @@
 
     <!-- Intro -->
     <div id="intro" class="popup mfp-with-anim mfp-hide tm-bg-gray">
-        <a href="#" class="tm-close-popup">
-            <i class="fas fa-times"></i>
-        </a>
+        <div class="tm-close">
+            <a href="#" class="tm-close-popup">
+                <i class="fas fa-times"></i>
+            </a>
+        </div>
         <div class="tm-row tm-intro-row">
             <img src="{{url_for('static', filename='img/intro.jpg')}}" alt="Intro" class="tm-intro-img">
             <div class="tm-col tm-bg-white tm-intro-pad">
@@ -84,9 +86,11 @@
 
     <!-- Predict -->
     <div id="about" class="popup mfp-with-anim mfp-hide tm-bg-gray">
-        <a href="#" class="tm-close-popup">
-            <i class="fas fa-times"></i>
-        </a>
+        <div class="tm-close">
+            <a href="#" class="tm-close-popup">
+                <i class="fas fa-times"></i>
+            </a>
+        </div>
         <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">Apa itu <i>Water Quality Index</i>?</h2>
         <div class="tm-row tm-about-row">
             <div class="tm-col tm-about-col tm-about-left">
@@ -122,9 +126,11 @@
 
     <!-- About Us -->
     <div id="gallery" class="popup mfp-with-anim mfp-hide tm-bg-gray">
-        <a href="#" class="tm-close-popup">
-            <i class="fas fa-times"></i>
-        </a>
+        <div class="tm-close">
+            <a href="#" class="tm-close-popup">
+                <i class="fas fa-times"></i>
+            </a>
+        </div>
         <div class="tm-row tm-gallery-row">
             <div class="tm-gallery">
                 <div class="tm-gallery-container">
@@ -212,9 +218,11 @@
 
     <!-- Contact -->
     <div id="contact" class="popup mfp-with-anim mfp-hide tm-bg-gray">
-        <a href="#" class="tm-close-popup">
-            <i class="fas fa-times"></i>
-        </a>
+        <div class="tm-close">
+            <a href="#" class="tm-close-popup">
+                <i class="fas fa-times"></i>
+            </a>
+        </div>
         <h2 class="tm-contact-col tm-color-primary tm-page-title tm-mb-40">Contact Us</h2>
         <div class="tm-row tm-contact-row">
             <div class="tm-col tm-contact-col">
