--- a/templates/predict.html
+++ b/templates/predict.html
@@ -4,84 +4,88 @@
 
 {% block content %}
 <div class="tm-container">
-    {% if result == 5 %}
-    <p>Your water quality is Excellent</p>
-    <p>You can drink your water safely</p>
-    {% endif %}
+    <div class="tm-predict">
+        {% if result == 5 %}
+        <p>Your water quality is Excellent</p>
+        <p>You can drink your water safely</p>
+        {% endif %}
 
-    {% if result == 4 %}
-    <p>Your water quality is Good</p>
-    <p>You can drink your water safely</p>
-    {% endif %}
+        {% if result == 4 %}
+        <p>Your water quality is Good</p>
+        <p>You can drink your water safely</p>
+        {% endif %}
 
-    {% if result == 3 %}
-    <p>Your water quality is Fair</p>
-    <p>You can drink your water, but it is recommended to boil it first</p>
-    {% endif %}
+        {% if result == 3 %}
+        <p>Your water quality is Fair</p>
+        <p>You can drink your water, but it is recommended to boil it first</p>
+        {% endif %}
 
-    {% if result == 2 %}
-    <p>Your water quality is Marginal</p>
-    <p>Your water sill needs to be purified and further testing</p>
-    {% endif %}
+        {% if result == 2 %}
+        <p>Your water quality is Marginal</p>
+        <p>Your water sill needs to be purified and further testing</p>
+        {% endif %}
 
-    {% if result == 1 %}
-    <p>Your water quality is Poor</p>
-    <p>You cannot drink your water</p>
-    {% endif %}
-    
-    <br>
-    
-    <a href="https://jernihin.up.railway.app" class="tm-close-popup">
-        <i class="fas fa-times"></i>
-    </a>
-
-    <form id="contact-form" action="/result" method="POST">
-        <div class="row">
-            <div class="col">
-                <label for="fecal" class="form-label">Fecal</label>
-                <input type="nunmber" name="fecal" class="form-control" placeholder="Fecal" onkeypress="return isNumber(event)" required>
-            </div>
-            <div class="col">
-                <label for="oxygen" class="form-label">Oxygen</label>
-                <input type="nunmber" name="oxygen" class="form-control" placeholder="Oxygen" onkeypress="return isNumber(event)" required>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <label for="ph" class="form-label">pH</label>
-                <input type="nunmber" name="ph" class="form-control" placeholder="pH" onkeypress="return isNumber(event)" required>
-            </div>
-            <div class="col">
-                <label for="tot_sediment" class="form-label">Total Sediment</label>
-                <input type="nunmber" name="tot_sediment" class="form-control" placeholder="Total Sediment" onkeypress="return isNumber(event)" required>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <label for="temp" class="form-label">Temperature</label>
-                <input type="nunmber" name="temp" class="form-control" placeholder="Temperature" onkeypress="return isNumber(event)" required>
-            </div>
-            <div class="col">
-                <label for="nitrogen" class="form-label">Nitrogen</label>
-                <input type="nunmber" name="nitrogen" class="form-control" placeholder="Nitrogen" onkeypress="return isNumber(event)" required>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <label for="phosphorus" class="form-label">Phosphorus</label>
-                <input type="nunmber" name="phosphorus" class="form-control" placeholder="Phosphorus" onkeypress="return isNumber(event)" required>
-            </div>
-            <div class="col">
-                <label for="turbidity" class="form-label">Turbidity</label>
-                <input type="nunmber" name="turbidity" class="form-control" placeholder="Turbidity" onkeypress="return isNumber(event)" required>
-            </div>
-        </div>
+        {% if result == 1 %}
+        <p>Your water quality is Poor</p>
+        <p>You cannot drink your water</p>
+        {% endif %}
         
-        <div class="form-group">
-            <br>
-            <button type="reset" class="tm-btn btn-red">Reset</button>
-            <button type="submit" class="tm-btn btn-blue tm-ml-10">Send</button>
+        <br>
+        
+        <div class="tm-close">
+            <a href="/" class="tm-close-popup">
+                <i class="fas fa-times"></i>
+            </a>
         </div>
-    </form>
+
+        <form id="contact-form" action="/result" method="POST">
+            <div class="row">
+                <div class="col">
+                    <label for="fecal" class="form-label">Fecal</label>
+                    <input type="nunmber" name="fecal" class="form-control" placeholder="Fecal" onkeypress="return isNumber(event)" required>
+                </div>
+                <div class="col">
+                    <label for="oxygen" class="form-label">Oxygen</label>
+                    <input type="nunmber" name="oxygen" class="form-control" placeholder="Oxygen" onkeypress="return isNumber(event)" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label for="ph" class="form-label">pH</label>
+                    <input type="nunmber" name="ph" class="form-control" placeholder="pH" onkeypress="return isNumber(event)" required>
+                </div>
+                <div class="col">
+                    <label for="tot_sediment" class="form-label">Total Sediment</label>
+                    <input type="nunmber" name="tot_sediment" class="form-control" placeholder="Total Sediment" onkeypress="return isNumber(event)" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label for="temp" class="form-label">Temperature</label>
+                    <input type="nunmber" name="temp" class="form-control" placeholder="Temperature" onkeypress="return isNumber(event)" required>
+                </div>
+                <div class="col">
+                    <label for="nitrogen" class="form-label">Nitrogen</label>
+                    <input type="nunmber" name="nitrogen" class="form-control" placeholder="Nitrogen" onkeypress="return isNumber(event)" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label for="phosphorus" class="form-label">Phosphorus</label>
+                    <input type="nunmber" name="phosphorus" class="form-control" placeholder="Phosphorus" onkeypress="return isNumber(event)" required>
+                </div>
+                <div class="col">
+                    <label for="turbidity" class="form-label">Turbidity</label>
+                    <input type="nunmber" name="turbidity" class="form-control" placeholder="Turbidity" onkeypress="return isNumber(event)" required>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <br>
+                <button type="reset" class="tm-btn btn-red">Reset</button>
+                <button type="submit" class="tm-btn btn-blue tm-ml-10">Send</button>
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
