--- a/templates/index.html
+++ b/templates/index.html
@@ -236,7 +236,7 @@
                     <div class="form-group">
                         <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message" required></textarea>
                     </div>
-                    <div class="form-group tm-text-right">
+                    <div class="form-group">
                         <button type="reset" class="tm-btn btn-red">Reset</button>
                         <button type="submit" class="tm-btn btn-blue tm-ml-10">Send</button>
                     </div>
