--- a/templates/predict.html
+++ b/templates/predict.html
@@ -40,41 +40,41 @@
 
         <form id="contact-form" action="/result" method="POST">
             <div class="row">
-                <div class="col">
+                <div class="col-md-6">
                     <label for="fecal" class="form-label">Fecal</label>
                     <input type="nunmber" name="fecal" class="form-control" placeholder="Fecal" onkeypress="return isNumber(event)" required>
                 </div>
-                <div class="col">
+                <div class="col-md-6">
                     <label for="oxygen" class="form-label">Oxygen</label>
                     <input type="nunmber" name="oxygen" class="form-control" placeholder="Oxygen" onkeypress="return isNumber(event)" required>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-md-6">
                     <label for="ph" class="form-label">pH</label>
                     <input type="nunmber" name="ph" class="form-control" placeholder="pH" onkeypress="return isNumber(event)" required>
                 </div>
-                <div class="col">
+                <div class="col-md-6">
                     <label for="tot_sediment" class="form-label">Total Sediment</label>
                     <input type="nunmber" name="tot_sediment" class="form-control" placeholder="Total Sediment" onkeypress="return isNumber(event)" required>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-md-6">
                     <label for="temp" class="form-label">Temperature</label>
                     <input type="nunmber" name="temp" class="form-control" placeholder="Temperature" onkeypress="return isNumber(event)" required>
                 </div>
-                <div class="col">
+                <div class="col-md-6">
                     <label for="nitrogen" class="form-label">Nitrogen</label>
                     <input type="nunmber" name="nitrogen" class="form-control" placeholder="Nitrogen" onkeypress="return isNumber(event)" required>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-md-6">
                     <label for="phosphorus" class="form-label">Phosphorus</label>
                     <input type="nunmber" name="phosphorus" class="form-control" placeholder="Phosphorus" onkeypress="return isNumber(event)" required>
                 </div>
-                <div class="col">
+                <div class="col-md-6">
                     <label for="turbidity" class="form-label">Turbidity</label>
                     <input type="nunmber" name="turbidity" class="form-control" placeholder="Turbidity" onkeypress="return isNumber(event)" required>
                 </div>
@@ -83,7 +83,7 @@
             <div class="form-group">
                 <br>
                 <button type="reset" class="tm-btn btn-red">Reset</button>
-                <button type="submit" class="tm-btn btn-blue tm-ml-10">Send</button>
+                <button type="submit" class="tm-btn btn-blue tm-ml-10">Prediksi</button>
             </div>
         </form>
     </div>
