--- a/templates/predict.html
+++ b/templates/predict.html
@@ -7,7 +7,7 @@
     <div class="tm-predict">
         <div class="tm-predict-result">
             {% if result == 5 %}
-            <p>Your water quality is <span class="result green">Excellent</span></p>
+            <p class="tm-predict-title">Your water quality is <span class="result green">Excellent</span></p>
             <p class="tm-predict-desc"><span>You can drink your water safely</span></p>
             {% endif %}
     
