--- a/templates/header.html
+++ b/templates/header.html
@@ -1,13 +1,15 @@
 <header class="tm-site-header">
     <div class="navbar">
-        <div class="navbar-left">
-            <img src="{{url_for('static', filename='img/Jernihin.svg')}}" alt="">
-        </div>
-        <div class="navbar-right">
-            <h1 class="tm-title tm-mt-0 tm-mb-0">
-                <span class="tm-color-primary">JERNIH</span><span class="tm-color-gray-2">in</span>
-            </h1>
-            <em class="tm-tagline tm-color-light-gray">Water Quality Prediction</em>
-        </div>
+        <a href="/" class="navbar-container">
+            <div class="navbar-left">
+                <img src="{{url_for('static', filename='img/Jernihin.svg')}}" alt="">
+            </div>
+            <div class="navbar-right">
+                <h1 class="tm-title tm-mt-0 tm-mb-0">
+                    <span class="tm-color-primary">JERNIH</span><span class="tm-color-gray-2">in</span>
+                </h1>
+                <em class="tm-tagline tm-color-light-gray">Water Quality Prediction</em>
+            </div>
+        </a>
     </div>
 </header>
