--- a/templates/index.html
+++ b/templates/index.html
@@ -228,13 +228,13 @@
             <div class="tm-col tm-contact-col">
                 <form id="contact-form" action="" method="POST" class="tm-contact-form">
                     <div class="form-group">
-                        <input type="text" name="name" class="form-control rounded-0" placeholder="Full Name" required>
+                        <input type="text" name="name" class="form-control" placeholder="Full Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" name="email" class="form-control rounded-0" placeholder="Email" required>
+                        <input type="email" name="email" class="form-control" placeholder="Email" required>
                     </div>
                     <div class="form-group">
-                        <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message" required></textarea>
+                        <textarea rows="8" name="message" class="form-control" placeholder="Message" required></textarea>
                     </div>
                     <div class="form-group">
                         <button type="reset" class="tm-btn btn-red">Reset</button>
