update footer link

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
 <footer class="tm-footer">
-    <span>Copyright &copy; <script>document.write(getYear)</script> <a href="https://jernihin.up.railway.app">JERNIHin</a></span>
+    <span>Copyright &copy; <script>document.write(getYear)</script> <a href="/">JERNIHin</a></span>
     <span>C22-078 SIB Dicoding 3 Capstone Team</span>
 </footer>
