update dev team card

--- a/templates/index.html
+++ b/templates/index.html
@@ -206,7 +206,7 @@
                         </li>
                     </ul>
                     <p>
-                        Kami tim JERNIHin, mahasiswa semester 5 yang berasal dari Prodi Teknik Informatika Universitas Lampung (Gilang), Prodi Informatika Universitas AMIKOM Purwokerto (Ades), dan Prodi Ilmu Komputer Universitas Sumatera Utara (Andrew & Chea). Kami tergabung dalam Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada Pengembangan Machine Learning dan Front-End Web Developer.
+                        Kami tim JERNIHin, mahasiswa semester 5 yang berasal dari Prodi Teknik Informatika Universitas Lampung (<a href="#" class="tm-gallery-link" data-filter="gilang">Gilang</a>), Prodi Informatika Universitas AMIKOM Purwokerto (<a href="#" class="tm-gallery-link" data-filter="ades">Ades</a>), dan Prodi Ilmu Komputer Universitas Sumatera Utara (<a href="#" class="tm-gallery-link" data-filter="andrew">Andrew</a> & <a href="#" class="tm-gallery-link" data-filter="cheliza">Chea</a>). Kami tergabung dalam Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada Pengembangan Machine Learning dan Front-End Web Developer.
                     </p>
                 </div>
                 <a href="#" class="tm-btn btn-blue mfp-prevent-close tm-btn-next">
