--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
             <div class="tm-col tm-about-col tm-about-left">
                 <img src="{{url_for('static', filename='img/predict.jpg')}}" alt="Prediction" class="tm-mb-15">
                 <p class="tm-mb-15 tm-color-primary">
-                   <b><i>Save Water, Save Life</i></b> 
+                   <b><i>"Save Water, Save Life"</i></b> 
                 </p>
                 <p class="tm-mb-15">
                     <i>Water quality index</i> (WQI) adalah salah satu alat untuk mengevaluasi tingkat pencemaran perairan yang cukup efektif dengan informasi yang komprehensif, mudah dipahami dan dapat digunakan olehmasyarakat. Metode analisa WQI dari beberapa parameter kualitas air dapat menjadi salah satu alat monitoring kualitas air. Nilai WQI berkisar dari 0 – 100 dengan kriteria nilai yang tinggi menunjukkan kualitas air yang lebih baik.
@@ -107,7 +107,7 @@
                     <b>Pentingnya Pemantauan Kualitas Air</b>
                 </p>
                 <ol class="tm-mb-15">
-                    <li><b>Sebagai Kebutuhan Dasar Umat Manusia</b>
+                    <li><b>Sebagai Kebutuhan Dasar Manusia</b>
                         <p>Air adalah salah satu kebutuhan paling dasar untuk mendukung hidup manusia. Hal ini merefleksikan betapa pentingnya air dalam hidup manusia. Namun, saat ini terdapat tantangan sumber dan ketersediaan air bersih yang semakin mendesak dan harus ditangani.</p>
                     </li>
                     <li><b>Kualitas yang aman untuk dikonsumsi</b>
