--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
         <div class="tm-row tm-about-row">
             <div class="tm-col tm-about-col tm-about-left">
                 <img src="{{url_for('static', filename='img/predict.jpg')}}" alt="Prediction" class="tm-mb-15">
-                <p class="tm-mb-16 tm-color-primary">
+                <p class="tm-mb-15 tm-text-center tm-color-primary">
                    <b><i>"Save Water, Save Life"</i></b> 
                 </p>
                 <p class="tm-mb-15">
@@ -103,7 +103,7 @@
                 </p>
             </div>
             <div class="tm-col tm-about-col">
-                <p class="tm-mb-16 tm-color-primary">
+                <p class="tm-mb-15 tm-text-center tm-color-primary">
                     <b>Pentingnya Pemantauan Kualitas Air</b>
                 </p>
                 <ol class="tm-mb-15">
